--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: floralwhite);
+}
+
+.border-temp {
+  border: greenyellow 2px solid;
+}
+
+.border-temp-red {
+  border: indianred 2px solid;
+}
+
+.bg-green {
+  color: lightgreen;
+}
+.bg-red {
+  color: crimson;
+}
+.bg-amber {
+  color: orange;
+}
+.bg-blue {
+  color: blue;
+}
+.price-bg {
+  background: rgba(51,51,51,1);
+  color: floralwhite;
+}
+.ask-bid-bg {
+  background: rgba(25,25,25,1);
+  color: floralwhite;
+}
+
+hr.hr-style {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
