--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
+:root {
+  --socket-border-color: rgba(200, 200, 200, 0.2);
+}
+
 body {
-  background: floralwhite);
+  background: rgba(25, 25, 25, 1);
+  color: floralwhite;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .border-temp {
@@ -23,16 +29,21 @@ body {
   color: blue;
 }
 .price-bg {
-  background: rgba(51,51,51,1);
+  background: rgba(51, 51, 51, 1);
   color: floralwhite;
 }
 .ask-bid-bg {
-  background: rgba(25,25,25,1);
+  background: rgba(25, 25, 25, 1);
   color: floralwhite;
 }
 
 hr.hr-style {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0)
+  );
 }
