--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,17 +1,21 @@
-<hr class="hr-style">
+<hr class="hr-style" />
+
 <div class="d-flex justify-content-center flex-wrap">
-  <app-bitcoin></app-bitcoin>
+  <!-- <app-bitcoin></app-bitcoin>
   <app-ethereum></app-ethereum>
-  <app-lite-coin></app-lite-coin>
-</div><!--End of flex wrapper-->
-<div class="d-flex justify-content-center flex-wrap text-center">
-  <div class="p-2"><p class="small text-muted">Disclaimer: Price updated every 1 second. Prices provided by <a
-    href="https://www.gdax.com/" target="_blank">GDAX</a></p></div>
+  <app-lite-coin></app-lite-coin> -->
 </div>
-<hr class="hr-style">
+<!--End of flex wrapper-->
+<!-- <div class="d-flex justify-content-center flex-wrap text-center">
+  <div class="p-2">
+    <p class="small text-muted">
+      Disclaimer: Price updated every 1 second. Prices provided by
+      <a href="https://www.gdax.com/" target="_blank">GDAX</a>
+    </p>
+  </div>
+</div> -->
+
 <app-forex></app-forex>
-<hr class="hr-style">
+<hr class="hr-style" />
 <app-footer></app-footer>
-<hr class="hr-style">
-
-
+<hr class="hr-style" />
